Bug 817972 - Make Gecko Bluetooth capable of queueing file-sending requests, r=gyeh